<resources>
    <string name="app_name">MoneyApp</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_fullName">Enter full name</string>
    <string name="invalid_name">Invalid name</string>
    <string name="zostatok_na_te">Zostatok na účte</string>
    <string name="description">Popis</string>
    <string name="invalid_incomePercents">invalid income percents</string>
    <string name="invalid_sum">invalid sum</string>
    <string name="percento_na_ucet">percento idúce na tento účet</string>
    <string name="transakcie">Transakcion</string>
    <string name="vytvori_typ_v_davku">Create expenditure category</string>
    <string name="typ_v_davku">Name</string>
    <string name="prida_v_davok">Create expenditure</string>
    <string name="et">Bill</string>
    <string name="kateg_rie">Category</string>
    <string name="suma">Sum</string>
    <string name="prida_peniaze_na_et">Add money to bill</string>
    <string name="n_zov_tu">Name</string>
    <string name="z_prijmu">% from income</string>
    <string name="popis">Description</string>
    <string name="vytvori_et">Create bill</string>
    <string name="nickname">Nickname</string>
    <string name="profilov_obr_zok">Profile picture</string>
    <string name="zmeni_heslo">Change password</string>
    <string name="star_heslo">Old password</string>
    <string name="nov_heslo">New password</string>
    <string name="zopakujte_heslo">Repeat password</string>
    <string name="rozpo_ta_pr_jem">Split income</string>
    <string name="rozpo_ta">Split</string>
    <string name="zdroj_pr_jmu">Income source</string>
    <string name="rozposla">Send</string>
    <string name="zada_pr_jem_na_konkr_tny_et">Create income to specific bill</string>
    <string name="vytvori_typ_pr_jmu">Create income type</string>
    <string name="typ_v_davk">Name</string>
    <string name="zoznam_typov">List of types</string>
    <string name="prida">Create</string>
    <string name="prava_transakcie">Change transaction</string>
    <string name="kateg_ria">Category</string>
    <string name="upravi">Change</string>
    <string name="vymaza">Delete</string>
    <string name="account_name">Názov účtu</string>
    <string name="category_in_bill">Category in bill:</string>
    <string name="profile">Profile</string>
    <string name="income_category">Create income cateogry</string>
    <string name="expenditure">Create expenditure category</string>
    <string name="create_new_bill">Create new bill</string>
    <string name="add_exp">Add expenditure</string>
    <string name="split_income">Split income</string>
    <string name="creat_income">Add income</string>
    <string name="logout">Logout</string>
    <string name="invalid_profilepassword">Invalid password</string>
    <string name="invalid_repeatPassword">Password dont match</string>
    <string name="money_calculator">Money calculator</string>
    <string name="button">Delete</string>
</resources>