<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_createExpenditure"
            android:title="@string/add_exp" />
        <item
            android:id="@+id/nav_splitIncome"
            android:title="@string/split_income" />
        <item
            android:id="@+id/nav_createIncome"
            android:title="@string/creat_income" />
        <item
            android:id="@+id/nav_newBill"
            android:title="@string/create_new_bill" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:title="@string/expenditure" />
        <item
            android:id="@+id/nav_type"
            android:title="@string/income_category" />
    </group>
</menu>